--- a/style.css
+++ b/style.css
@@ -5,5 +5,12 @@ h1{
 }
 
 spam{
-    color:burlywood 
+    color:rgb(72, 255, 0) 
+}
+
+body{
+    text-align: center;
+    background-color: black;
+    color: white;
+    font-family: "Asap", sans-serif ;
 }
